--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -10,8 +10,10 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]  
-  schedule:
-    - cron: '45 18 * * 3'
+
+  workflow_dispatch:  
+  #schedule:
+  #  - cron: '45 18 * * 3'
 
 jobs:
   tfsec:
